--- a/directories/fiware-summit/agenda/filters.html
+++ b/directories/fiware-summit/agenda/filters.html
@@ -60,6 +60,7 @@
     <select name="" id="filterSession">
       <option value="*">Sessions</option>
           <option value='ai---data-driven-cities-for-the-fifa-world-cup-2030'>AI &amp; Data-Driven Cities for the FIFA World Cup 2030</option>
+          <option value='ai---iot-for-smart-water-and-resilient-cities'>AI &amp; IoT for Smart Water and Resilient Cities</option>
           <option value='ai---machine-learning'>AI &amp; Machine Learning</option>
           <option value='ai-and-natural-language-for-smart-cities'>AI and Natural Language for Smart Cities</option>
           <option value='building-smart-governance-with-interoperability'>Building Smart Governance with Interoperability</option>
@@ -98,15 +99,19 @@
           <option value='vinith-bhandari'>Vinith Bhandari</option>
           <option value='david-campo'>David Campo</option>
           <option value='chandra-challagonda'>Chandra Challagonda</option>
+          <option value='didac-colominas'>Didac Colominas</option>
           <option value='javier-conde-díaz'>Javier Conde Díaz</option>
           <option value='luigi-coppolino'>Luigi Coppolino</option>
           <option value='andrea-cruciani'>Andrea Cruciani</option>
           <option value='gert-de-tant'>Gert De Tant</option>
           <option value='amal-el-fellah-seghrouchni'>Amal El Fellah Seghrouchni</option>
           <option value='jason-fox'>Jason Fox</option>
+          <option value='javier-galvez-campanelli'>Javier Galvez Campanelli</option>
           <option value='gerardo-guarino-f-'>Gerardo Guarino F.</option>
           <option value='aawatif-hayar'>Aawatif Hayar</option>
+          <option value='eloy-hernandez'>Eloy Hernandez</option>
           <option value='dr--hicham-el-habti'>Dr. Hicham El Habti</option>
+          <option value='sveva-ianese'>Sveva Ianese</option>
           <option value='antonio-jara'>Antonio Jara</option>
           <option value='jin-kawasaki'>Jin Kawasaki</option>
           <option value='jure-lampe'>Jure Lampe</option>
@@ -114,10 +119,12 @@
           <option value='francisco-meléndez'>Francisco Meléndez</option>
           <option value='yasunori-mochizuki'>Yasunori Mochizuki</option>
           <option value='prof--mohamed-dafir'>Prof. Mohamed Dafir</option>
+          <option value='prof--mohammed-dafir'>Prof. Mohammed Dafir</option>
           <option value='sashiko-muto'>Sashiko Muto</option>
           <option value='khalid-ouakka'>Khalid Ouakka</option>
           <option value='manfredi-pistone'>Manfredi Pistone</option>
           <option value='matteo-repetto'>Matteo Repetto</option>
+          <option value='rubén-rosales-patón'>Rubén Rosales Patón</option>
           <option value='alessandro-rossi'>Alessandro Rossi</option>
           <option value='björn-schwarze'>Björn Schwarze</option>
           <option value='megumi-suzuki'>Megumi Suzuki</option>
