--- a/directories/fiware-summit/agenda/program/sitemap.html
+++ b/directories/fiware-summit/agenda/program/sitemap.html
@@ -68,13 +68,14 @@ li {
 		<li><a href="https://www.fiware.org/fgs-2025/dr--hicham-el-habti--president-of-um6p.html">Dr. Hicham El Habti, President of UM6P</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/amal-el-fellah-seghrouchni--minister-of-digital-transition-and-administrative-reform.html">Amal El Fellah Seghrouchni, Minister of Digital Transition and Administrative Reform</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/general-directorate-of-territorial-collectivities--ministry-of-interior-in-morocco.html">General Directorate of Territorial Collectivities, Ministry of Interior in Morocco</a></li>
-		<li><a href="https://www.fiware.org/fgs-2025/introduction-to-the-fiware-global-summit-and-fiware-community-news.html">Introduction to the FIWARE Global Summit and FIWARE Community News</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/aawatif-hayar--chairman-of-the-smart-cities-morocco-alliance.html">Aawatif Hayar, Chairman of the Smart Cities Morocco Alliance</a></li>
+		<li><a href="https://www.fiware.org/fgs-2025/introduction-to-the-fiware-global-summit-and-fiware-community-news.html">Introduction to the FIWARE Global Summit and FIWARE Community News</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/coffee-break.html">Coffee Break</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/global-fiware-use-cases-shaping-smart-cities-for-2030.html">Global FIWARE Use Cases Shaping Smart Cities for 2030</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/fiware-training.html">FIWARE Training</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/introduction-to-json-ld.html">Introduction to JSON-LD</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/fiware-for-cities-from-europe-to-the-world--from-smart-to-ai-ready.html">FIWARE for Cities From Europe to the World, From Smart to AI-ready</a></li>
+		<li><a href="https://www.fiware.org/fgs-2025/telefónica---fiware--building-smart-cities-and-destinations.html">Telefónica &amp; FIWARE: Building Smart Cities and Destinations</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/sustainable-smart-city-with-environmental-sustainability-for-the-use-case-of-cartagena-for-low-emission-zones.html">Sustainable Smart City With Environmental sustainability for the Use Case of Cartagena for Low Emission Zones</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/smart-data-models.html">Smart Data Models</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/the-use-case-is-the-goal--interoperability-is-the-means--fiware-is-the-core-.html">The Use Case is the Goal. Interoperability is the Means. FIWARE is the Core.</a></li>
@@ -86,12 +87,15 @@ li {
 		<li><a href="https://www.fiware.org/fgs-2025/lunch.html">Lunch</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/when-intelligence-meets-endurance--ai---data-driven-cities-for-the-fifa-world-cup-2030.html">When Intelligence Meets Endurance: AI &amp; Data-Driven Cities for the FIFA World Cup 2030</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/blue-cities-of-tomorrow--ai---iot-for-smart-water-and-resilient-cities.html">Blue Cities of Tomorrow: AI &amp; IoT for Smart Water and Resilient Cities</a></li>
+		<li><a href="https://www.fiware.org/fgs-2025/recreate-water-tool.html">RECREATE Water Tool</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/smart-data-spaces-for-high-profile-events--enabling-interoperability--trust--and-real-time-insight.html">Smart Data Spaces for High Profile Events: Enabling Interoperability, Trust, and Real-Time Insight</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/machine-learning--mlops---fiware.html">Machine Learning, MLOps &amp; FIWARE</a></li>
-		<li><a href="https://www.fiware.org/fgs-2025/enabling-interoperable-data-exchange-between-systems.html">Enabling Interoperable Data Exchange Between Systems</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/from-smart-meters-to-digital-twins--how-fiwarebox-simplifies-and-accelerates-fiware-based-smart-city-data-integration-and-visualization-on-a-budget.html">From Smart Meters to Digital Twins: How FIWAREBox Simplifies and Accelerates FIWARE-Based Smart City Data Integration and Visualization on a Budget</a></li>
+		<li><a href="https://www.fiware.org/fgs-2025/aquaspice-real-time-monitoring-platform.html">Aquaspice Real Time Monitoring Platform</a></li>
+		<li><a href="https://www.fiware.org/fgs-2025/enabling-interoperable-data-exchange-between-systems.html">Enabling Interoperable Data Exchange Between Systems</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/orchestrating-data-sovereignty-for-circular-and-climate-resilient-cities.html">Orchestrating Data Sovereignty for Circular and Climate-Resilient Cities</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/opensustie-and-futrhub-collaborations--shaping-future-of-smart-cities-with-smart-buildings.html">OpenSUSTIE and FUTRHUB Collaborations: Shaping Future of Smart Cities with Smart Buildings</a></li>
+		<li><a href="https://www.fiware.org/fgs-2025/asteriot--a-scalable-fiware-based-platform-for-smart-water-management-and-early-warning-systems.html">AsterIoT: A Scalable FIWARE-Based Platform for Smart Water Management and Early Warning Systems</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/introduction-to-iot-agents.html">Introduction to IoT Agents</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/data-as-a-strategic-asset--lessons-from-porto-s-urban-platform-and-the-beopen-project.html">Data as a Strategic Asset: Lessons from Porto’s Urban Platform and the BeOpen Project</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/coffee-break.html">Coffee Break</a></li>
@@ -101,7 +105,7 @@ li {
 		<li><a href="https://www.fiware.org/fgs-2025/earthdatainsight--turning-satellite-data-into-smart-decisions-for-climate-resilient-cities.html">EarthDataInsight: Turning Satellite Data into Smart Decisions for Climate-Resilient Cities</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/from-silos-to-synergy--building-smart-governance-with-interoperability.html">From Silos to Synergy: Building Smart Governance with Interoperability</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/digital-twins-for-real-time-optimization-of-sporting-mega-events.html">Digital Twins for Real-Time Optimization of Sporting Mega-Events</a></li>
-		<li><a href="https://www.fiware.org/fgs-2025/european-local-digital-twin-toolbox-project---advancing-the-digital-maturity-of-cities.html">European Local Digital Twin Toolbox Project - Advancing the Digital Maturity of Cities</a></li>
+		<li><a href="https://www.fiware.org/fgs-2025/local-digital-twin-toolbox--the-role-of-fiware-in-the-emerging-digital-twins.html">Local Digital Twin Toolbox: The role of FIWARE in the emerging Digital Twins</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/ngsi-ld-farm-exercises.html">NGSI-LD Farm Exercises</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/building-the-future--sustainable-smart-cities-for-resilient-urban-living.html">Building the Future: Sustainable Smart Cities for Resilient Urban Living</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/improving-urban-management-through-generative-ai-and-fiware.html">Improving Urban Management through Generative AI and FIWARE</a></li>
@@ -112,17 +116,21 @@ li {
 		<li><a href="https://www.fiware.org/fgs-2025/interoperability-between-energy-communities.html">Interoperability Between Energy Communities</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/enershare---the-energy-data-space-to-facilitate-sustainable-renewable-consumer-centric-transition.html">ENERSHARE - The Energy Data Space to Facilitate Sustainable Renewable Consumer Centric Transition</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/registration-and-welcome-coffee.html">Registration and Welcome Coffee</a></li>
+		<li><a href="https://www.fiware.org/fgs-2025/secure-smart-city.html">Secure Smart City</a></li>
+		<li><a href="https://www.fiware.org/fgs-2025/ict-platform-and-rapid-prototyping-with-fiware.html">ICT Platform and Rapid Prototyping With FIWARE</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/governing-trust--legal-and-data-space-frameworks-for-secure-cities-and-resilient-event-management.html">Governing Trust: Legal and Data Space Frameworks for Secure Cities and Resilient Event Management</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/fiware-training.html">FIWARE Training</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/identity-and-access-control-in-fiware-systems.html">Identity and Access Control in FIWARE Systems</a></li>
-		<li><a href="https://www.fiware.org/fgs-2025/exploiting-fiware-potential-for-ehds-regulation-compliance.html">Exploiting FIWARE Potential for EHDS Regulation Compliance</a></li>
+		<li><a href="https://www.fiware.org/fgs-2025/towards-human-centric-smart-city-services-through-decentralized-identity-management-.html">Towards Human-Centric Smart City Services through Decentralized Identity Management
+</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/overview-of-fiware-data-space-components.html">Overview of FIWARE Data Space Components</a></li>
+		<li><a href="https://www.fiware.org/fgs-2025/cyber-security-digital-twins-for-securing-smart-cities.html">Cyber-security Digital Twins for Securing Smart Cities</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/deploying-a-data-space-connector.html">Deploying a Data Space Connector</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/break.html">Break</a></li>
-		<li><a href="https://www.fiware.org/fgs-2025/secure-smart-city.html">Secure Smart City</a></li>
-		<li><a href="https://www.fiware.org/fgs-2025/ict-platform-and-rapid-prototyping-with-fiware.html">ICT Platform and Rapid Prototyping With FIWARE</a></li>
+		<li><a href="https://www.fiware.org/fgs-2025/navigating-legal-challenges-in-data-spaces--lessons-from-the-eu-experience-.html">Navigating Legal Challenges in Data Spaces: Lessons From the EU experience.</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/talking-with-your-smart-solution.html">Talking With Your Smart Solution</a></li>
-		<li><a href="https://www.fiware.org/fgs-2025/cyber-security-digital-twins-for-securing-smart-cities.html">Cyber-security Digital Twins for Securing Smart Cities</a></li>
+		<li><a href="https://www.fiware.org/fgs-2025/exploiting-fiware-potential-for-ehds-regulation-compliance.html">Exploiting FIWARE Potential for EHDS Regulation Compliance</a></li>
+		<li><a href="https://www.fiware.org/fgs-2025/university-5-0-dataspace--a-smart-campus-ecosystem-living-lab-for-ai-driven-innovation-in-the-region.html">University 5.0 Dataspace: a Smart Campus Ecosystem living lab for AI-driven innovation in the region</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/best-smart-cities-use-cases-in-morocco.html">Best Smart Cities Use Cases in Morocco</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/fiware-turtle-sim-using-a-ros2-iot-agent.html">FIWARE Turtle SIM Using a ROS2 IoT Agent</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/ddos-with-orion-ld.html">DDOS With Orion-LD</a></li>
