fgs speakers updates

--- a/directories/fiware-summit/speakers/filters.html
+++ b/directories/fiware-summit/speakers/filters.html
@@ -53,6 +53,7 @@
                         <option value='agricolus'>Agricolus</option>
                         <option value='artech-international-bvba'>Artech International BVBA</option>
                         <option value='associação-porto-digital'>Associação Porto Digital</option>
+                        <option value='berkane-provincial-council'>Berkane Provincial Council</option>
                         <option value='cnr---imati'>CNR / IMATI</option>
                         <option value='data-valley-consulting--university-of-padova--italy-'>Data Valley Consulting, University of Padova (Italy)</option>
                         <option value='digital-development-agency--add-'>Digital Development Agency (ADD)</option>
@@ -101,6 +102,7 @@
                         <option value='expert'>Expert</option>
                         <option value='fellow'>Fellow</option>
                         <option value='general-manager'>General Manager</option>
+                        <option value='governor'>Governor</option>
                         <option value='head-of-unit'>Head of Unit</option>
                         <option value='lead'>Lead</option>
                         <option value='manager'>Manager</option>
