--- a/directories/fiware-summit/agenda/filters.html
+++ b/directories/fiware-summit/agenda/filters.html
@@ -116,6 +116,7 @@
           <option value='jin-kawasaki'>Jin Kawasaki</option>
           <option value='jure-lampe'>Jure Lampe</option>
           <option value='frederico-lopes'>Frederico Lopes</option>
+          <option value='davor-meersman'>Davor Meersman</option>
           <option value='francisco-meléndez'>Francisco Meléndez</option>
           <option value='yasunori-mochizuki'>Yasunori Mochizuki</option>
           <option value='prof--mohamed-dafir'>Prof. Mohamed Dafir</option>
@@ -128,6 +129,7 @@
           <option value='alessandro-rossi'>Alessandro Rossi</option>
           <option value='björn-schwarze'>Björn Schwarze</option>
           <option value='megumi-suzuki'>Megumi Suzuki</option>
+          <option value='thimo-thoeye'>Thimo Thoeye</option>
           <option value='brecht-van-de-vyvere'>Brecht van de Vyvere</option>
           <option value='stefan-wiedemann'>Stefan Wiedemann</option>
           <option value='ken-zangelin'>Ken Zangelin</option>
