--- a/directories/fiware-summit/agenda/program/sitemap.html
+++ b/directories/fiware-summit/agenda/program/sitemap.html
@@ -86,6 +86,7 @@ li {
 		<li><a href="https://www.fiware.org/fgs-2025/smart-metropolis-fiware-ihub--leading-brazil-s-smart-city-transformation-with-open-standards.html">Smart Metropolis FIWARE iHub: Leading Brazil’s Smart City Transformation with Open Standards</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/lunch.html">Lunch</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/when-intelligence-meets-endurance--ai---data-driven-cities-for-the-fifa-world-cup-2030.html">When Intelligence Meets Endurance: AI &amp; Data-Driven Cities for the FIFA World Cup 2030</a></li>
+		<li><a href="https://www.fiware.org/fgs-2025/unlocking-the-potential-of-data-spaces-for-smart-cities-and-communities.html">Unlocking the Potential of Data Spaces for Smart Cities and Communities</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/blue-cities-of-tomorrow--ai---iot-for-smart-water-and-resilient-cities.html">Blue Cities of Tomorrow: AI &amp; IoT for Smart Water and Resilient Cities</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/recreate-water-tool.html">RECREATE Water Tool</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/smart-data-spaces-for-high-profile-events--enabling-interoperability--trust--and-real-time-insight.html">Smart Data Spaces for High Profile Events: Enabling Interoperability, Trust, and Real-Time Insight</a></li>
@@ -96,6 +97,7 @@ li {
 		<li><a href="https://www.fiware.org/fgs-2025/orchestrating-data-sovereignty-for-circular-and-climate-resilient-cities.html">Orchestrating Data Sovereignty for Circular and Climate-Resilient Cities</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/opensustie-and-futrhub-collaborations--shaping-future-of-smart-cities-with-smart-buildings.html">OpenSUSTIE and FUTRHUB Collaborations: Shaping Future of Smart Cities with Smart Buildings</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/asteriot--a-scalable-fiware-based-platform-for-smart-water-management-and-early-warning-systems.html">AsterIoT: A Scalable FIWARE-Based Platform for Smart Water Management and Early Warning Systems</a></li>
+		<li><a href="https://www.fiware.org/fgs-2025/disrupting-global-construction-with-open-source-and-ai.html">Disrupting Global Construction with Open Source and AI</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/introduction-to-iot-agents.html">Introduction to IoT Agents</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/data-as-a-strategic-asset--lessons-from-porto-s-urban-platform-and-the-beopen-project.html">Data as a Strategic Asset: Lessons from Porto’s Urban Platform and the BeOpen Project</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/coffee-break.html">Coffee Break</a></li>
