fgs speakers updates

--- a/directories/fiware-summit/speakers/filters.html
+++ b/directories/fiware-summit/speakers/filters.html
@@ -63,6 +63,7 @@
                         <option value='ficodes'>Ficodes</option>
                         <option value='fiware-foundation'>FIWARE Foundation</option>
                         <option value='government-of-morocco'>Government of Morocco</option>
+                        <option value='grupotx'>GrupoTX</option>
                         <option value='ishare-foundation'>iSHARE Foundation</option>
                         <option value='latitudo-40'>Latitudo 40</option>
                         <option value='libelium'>Libelium</option>
