fgs speakers and agenda updates

--- a/directories/fiware-summit/agenda/calendar.html
+++ b/directories/fiware-summit/agenda/calendar.html
@@ -647,7 +647,7 @@ li {
 		</li>
 		<li>
             
-			<a href="https://calendar.google.com/calendar/render?action=TEMPLATE&text=Interoperability Between Energy Communities&details=Sustainable Smart City - SDG-Driven Solutions for a Sustainable World Cup Legacy++++Speakers:+Sashiko Muto,,&ctz=Africa/Casablanca&location=Auditorium&dates=20250522T164000/20250522T165000">Interoperability Between Energy Communities</a>
+			<a href="https://calendar.google.com/calendar/render?action=TEMPLATE&text=Interoperability Between Energy Communities&details=Sustainable Smart City - SDG-Driven Solutions for a Sustainable World Cup Legacy++++Speakers:+Sachiko Muto,,&ctz=Africa/Casablanca&location=Auditorium&dates=20250522T164000/20250522T165000">Interoperability Between Energy Communities</a>
              - Sustainable Smart City - SDG-Driven Solutions for a Sustainable World Cup Legacy
 			<div class="date-time">
 	            <span class="separator-dot"></span>
