--- a/directories/fiware-summit/agenda/filters.html
+++ b/directories/fiware-summit/agenda/filters.html
@@ -121,7 +121,7 @@
           <option value='yasunori-mochizuki'>Yasunori Mochizuki</option>
           <option value='prof--mohamed-dafir'>Prof. Mohamed Dafir</option>
           <option value='prof--mohammed-dafir'>Prof. Mohammed Dafir</option>
-          <option value='sashiko-muto'>Sashiko Muto</option>
+          <option value='sachiko-muto'>Sachiko Muto</option>
           <option value='khalid-ouakka'>Khalid Ouakka</option>
           <option value='manfredi-pistone'>Manfredi Pistone</option>
           <option value='matteo-repetto'>Matteo Repetto</option>
