fgs agenda updates

--- a/directories/fiware-summit/agenda/calendar.html
+++ b/directories/fiware-summit/agenda/calendar.html
@@ -825,7 +825,7 @@ li {
 		</li>
 		<li>
             
-			<a href="https://calendar.google.com/calendar/render?action=TEMPLATE&text=University 5.0 Dataspace: a Smart Campus Ecosystem living lab for AI-driven innovation in the region&details=Research &amp; Development - Legal and Data Space Frameworks for Secure Cities and Resilient Event Management++++Speakers:+Prof. Mohammed Dafir,,&ctz=Africa/Casablanca&location=Auditorium&dates=20250523T112000/20250523T113000">University 5.0 Dataspace: a Smart Campus Ecosystem living lab for AI-driven innovation in the region</a>
+			<a href="https://calendar.google.com/calendar/render?action=TEMPLATE&text=University 5.0 Dataspace: a Smart Campus Ecosystem living lab for AI-driven innovation in the region&details=Research &amp; Development - Legal and Data Space Frameworks for Secure Cities and Resilient Event Management++++Speakers:+Mohamed Dafir,,&ctz=Africa/Casablanca&location=Auditorium&dates=20250523T112000/20250523T113000">University 5.0 Dataspace: a Smart Campus Ecosystem living lab for AI-driven innovation in the region</a>
              - Research &amp; Development - Legal and Data Space Frameworks for Secure Cities and Resilient Event Management
 			<div class="date-time">
 	            <span class="separator-dot"></span>
@@ -891,7 +891,7 @@ li {
 		</li>
 		<li>
             
-			<a href="https://calendar.google.com/calendar/render?action=TEMPLATE&text=University 5.0 Dataspace: a Smart Campus Ecosystem Living Lab for AI-driven Innovation in the Region&details=Research &amp; Development - Session for Academic Partnerships++++Speakers:+Prof. Mohamed Dafir,,&ctz=Africa/Casablanca&location=Auditorium&dates=20250523T152000/20250523T153000">University 5.0 Dataspace: a Smart Campus Ecosystem Living Lab for AI-driven Innovation in the Region</a>
+			<a href="https://calendar.google.com/calendar/render?action=TEMPLATE&text=University 5.0 Dataspace: a Smart Campus Ecosystem Living Lab for AI-driven Innovation in the Region&details=Research &amp; Development - Session for Academic Partnerships++++Speakers:+Mohamed Dafir,,&ctz=Africa/Casablanca&location=Auditorium&dates=20250523T152000/20250523T153000">University 5.0 Dataspace: a Smart Campus Ecosystem Living Lab for AI-driven Innovation in the Region</a>
              - Research &amp; Development - Session for Academic Partnerships
 			<div class="date-time">
 	            <span class="separator-dot"></span>
