--- a/directories/fiware-summit/agenda/filters.html
+++ b/directories/fiware-summit/agenda/filters.html
@@ -103,6 +103,7 @@
           <option value='javier-conde-díaz'>Javier Conde Díaz</option>
           <option value='luigi-coppolino'>Luigi Coppolino</option>
           <option value='andrea-cruciani'>Andrea Cruciani</option>
+          <option value='mohamed-dafir'>Mohamed Dafir</option>
           <option value='gert-de-tant'>Gert De Tant</option>
           <option value='amal-el-fellah-seghrouchni'>Amal El Fellah Seghrouchni</option>
           <option value='jason-fox'>Jason Fox</option>
@@ -119,8 +120,6 @@
           <option value='davor-meersman'>Davor Meersman</option>
           <option value='francisco-meléndez'>Francisco Meléndez</option>
           <option value='yasunori-mochizuki'>Yasunori Mochizuki</option>
-          <option value='prof--mohamed-dafir'>Prof. Mohamed Dafir</option>
-          <option value='prof--mohammed-dafir'>Prof. Mohammed Dafir</option>
           <option value='sachiko-muto'>Sachiko Muto</option>
           <option value='khalid-ouakka'>Khalid Ouakka</option>
           <option value='manfredi-pistone'>Manfredi Pistone</option>
