fgs speakers updates

--- a/directories/fiware-summit/speakers/filters.html
+++ b/directories/fiware-summit/speakers/filters.html
@@ -62,6 +62,7 @@
                         <option value='eurecat'>Eurecat</option>
                         <option value='ficodes'>Ficodes</option>
                         <option value='fiware-foundation'>FIWARE Foundation</option>
+                        <option value='futurecraft-foundation'>FutureCraft Foundation</option>
                         <option value='government-of-morocco'>Government of Morocco</option>
                         <option value='grupotx'>GrupoTX</option>
                         <option value='ishare-foundation'>iSHARE Foundation</option>
@@ -100,6 +101,7 @@
                         <option value='coo'>COO</option>
                         <option value='director'>Director</option>
                         <option value='evangelist'>Evangelist</option>
+                        <option value='executive-chairman'>Executive Chairman</option>
                         <option value='expert'>Expert</option>
                         <option value='fellow'>Fellow</option>
                         <option value='general-manager'>General Manager</option>
