fgs25 speakers updates

--- a/directories/fiware-summit/speakers/filters.html
+++ b/directories/fiware-summit/speakers/filters.html
@@ -70,7 +70,6 @@
                         <option value='libelium'>Libelium</option>
                         <option value='meaningfy'>Meaningfy</option>
                         <option value='mitsubishi-electric'>Mitsubishi Electric</option>
-                        <option value='mitsubishi-electric-corporation'>Mitsubishi Electric Corporation</option>
                         <option value='mohammed-vi-polytechnic-university'>Mohammed VI Polytechnic University</option>
                         <option value='nec-corporation'>NEC Corporation</option>
                         <option value='oasc'>OASC</option>
@@ -95,10 +94,12 @@
                 <option value='*'>All Roles</option>
                         <option value='architect'>Architect</option>
                         <option value='assistant-professor'>Assistant Professor</option>
+                        <option value='cbo'>CBO</option>
                         <option value='ceo'>CEO</option>
                         <option value='chairman'>Chairman</option>
                         <option value='chairman-fiware-tsc'>Chairman FIWARE TSC</option>
                         <option value='coo'>COO</option>
+                        <option value='coordinator'>Coordinator</option>
                         <option value='director'>Director</option>
                         <option value='evangelist'>Evangelist</option>
                         <option value='executive-chairman'>Executive Chairman</option>
@@ -109,8 +110,11 @@
                         <option value='head-of-unit'>Head of Unit</option>
                         <option value='lead'>Lead</option>
                         <option value='manager'>Manager</option>
+                        <option value='managing-partner'>Managing Partner</option>
                         <option value='minister-delegate'>Minister Delegate</option>
                         <option value='owner'>Owner</option>
+                        <option value='president'>President</option>
+                        <option value='product-manager'>Product Manager</option>
                         <option value='professor'>Professor</option>
                         <option value='program-manager'>Program Manager</option>
                         <option value='researcher'>Researcher</option>
