--- a/directories/fiware-summit/agenda/filters.html
+++ b/directories/fiware-summit/agenda/filters.html
@@ -93,6 +93,7 @@
       <option value="*">Speakers</option>
           <option value='alberto-abella'>Alberto Abella</option>
           <option value='suna-akbayir'>Suna Akbayir</option>
+          <option value='mohamed-ali-habouha'>Mohamed Ali Habouha</option>
           <option value='joão-bastos'>João Bastos</option>
           <option value='jose-benítez'>Jose Benítez</option>
           <option value='massimo-bertoncini'>Massimo Bertoncini</option>
@@ -120,6 +121,7 @@
           <option value='davor-meersman'>Davor Meersman</option>
           <option value='francisco-meléndez'>Francisco Meléndez</option>
           <option value='yasunori-mochizuki'>Yasunori Mochizuki</option>
+          <option value='lydia-montandon'>Lydia Montandon</option>
           <option value='sachiko-muto'>Sachiko Muto</option>
           <option value='khalid-ouakka'>Khalid Ouakka</option>
           <option value='manfredi-pistone'>Manfredi Pistone</option>
@@ -127,7 +129,7 @@
           <option value='rubén-rosales-patón'>Rubén Rosales Patón</option>
           <option value='alessandro-rossi'>Alessandro Rossi</option>
           <option value='björn-schwarze'>Björn Schwarze</option>
-          <option value='megumi-suzuki'>Megumi Suzuki</option>
+          <option value='ángeles-tejado'>Ángeles Tejado</option>
           <option value='thimo-thoeye'>Thimo Thoeye</option>
           <option value='brecht-van-de-vyvere'>Brecht van de Vyvere</option>
           <option value='stefan-wiedemann'>Stefan Wiedemann</option>
