--- a/directories/fiware-summit/agenda/program/sitemap.html
+++ b/directories/fiware-summit/agenda/program/sitemap.html
@@ -72,6 +72,7 @@ li {
 		<li><a href="https://www.fiware.org/fgs-2025/introduction-to-the-fiware-global-summit-and-fiware-community-news.html">Introduction to the FIWARE Global Summit and FIWARE Community News</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/coffee-break.html">Coffee Break</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/global-fiware-use-cases-shaping-smart-cities-for-2030.html">Global FIWARE Use Cases Shaping Smart Cities for 2030</a></li>
+		<li><a href="https://www.fiware.org/fgs-2025/first-operational-smart-territory-in-morocco---berkane-experience.html">First Operational Smart Territory in Morocco - Berkane Experience</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/fiware-training.html">FIWARE Training</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/introduction-to-json-ld.html">Introduction to JSON-LD</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/fiware-for-cities-from-europe-to-the-world--from-smart-to-ai-ready.html">FIWARE for Cities From Europe to the World, From Smart to AI-ready</a></li>
@@ -93,12 +94,14 @@ li {
 		<li><a href="https://www.fiware.org/fgs-2025/machine-learning--mlops---fiware.html">Machine Learning, MLOps &amp; FIWARE</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/from-smart-meters-to-digital-twins--how-fiwarebox-simplifies-and-accelerates-fiware-based-smart-city-data-integration-and-visualization-on-a-budget.html">From Smart Meters to Digital Twins: How FIWAREBox Simplifies and Accelerates FIWARE-Based Smart City Data Integration and Visualization on a Budget</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/aquaspice-real-time-monitoring-platform.html">Aquaspice Real Time Monitoring Platform</a></li>
-		<li><a href="https://www.fiware.org/fgs-2025/enabling-interoperable-data-exchange-between-systems.html">Enabling Interoperable Data Exchange Between Systems</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/orchestrating-data-sovereignty-for-circular-and-climate-resilient-cities.html">Orchestrating Data Sovereignty for Circular and Climate-Resilient Cities</a></li>
-		<li><a href="https://www.fiware.org/fgs-2025/opensustie-and-futrhub-collaborations--shaping-future-of-smart-cities-with-smart-buildings.html">OpenSUSTIE and FUTRHUB Collaborations: Shaping Future of Smart Cities with Smart Buildings</a></li>
+		<li><a href="https://www.fiware.org/fgs-2025/collaboration-of-tegel-projekt-and-mitsubishi-electric--shaping-future-of-smart-cities-with-smart-buildings.html">Collaboration of Tegel Projekt and Mitsubishi Electric: Shaping Future of Smart Cities with Smart Buildings</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/asteriot--a-scalable-fiware-based-platform-for-smart-water-management-and-early-warning-systems.html">AsterIoT: A Scalable FIWARE-Based Platform for Smart Water Management and Early Warning Systems</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/disrupting-global-construction-with-open-source-and-ai.html">Disrupting Global Construction with Open Source and AI</a></li>
+		<li><a href="https://www.fiware.org/fgs-2025/waterverse--water-data-management-ecosystem-for-water-data-spaces.html">Waterverse, Water Data Management Ecosystem for Water Data Spaces</a></li>
+		<li><a href="https://www.fiware.org/fgs-2025/enabling-interoperable-data-exchange-between-systems.html">Enabling Interoperable Data Exchange Between Systems</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/introduction-to-iot-agents.html">Introduction to IoT Agents</a></li>
+		<li><a href="https://www.fiware.org/fgs-2025/ideation.html">IDEATION</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/data-as-a-strategic-asset--lessons-from-porto-s-urban-platform-and-the-beopen-project.html">Data as a Strategic Asset: Lessons from Porto’s Urban Platform and the BeOpen Project</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/coffee-break.html">Coffee Break</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/sdg-driven-solutions-for-a-sustainable-world-cup-legacy.html">SDG-Driven Solutions for a Sustainable World Cup Legacy</a></li>
