fgs25 agenda updates

--- a/directories/fiware-summit/agenda/filters.html
+++ b/directories/fiware-summit/agenda/filters.html
@@ -128,6 +128,7 @@
           <option value='matteo-repetto'>Matteo Repetto</option>
           <option value='rubén-rosales-patón'>Rubén Rosales Patón</option>
           <option value='alessandro-rossi'>Alessandro Rossi</option>
+          <option value='joaquín-salvachúa'>Joaquín Salvachúa</option>
           <option value='björn-schwarze'>Björn Schwarze</option>
           <option value='ángeles-tejado'>Ángeles Tejado</option>
           <option value='thimo-thoeye'>Thimo Thoeye</option>
