--- a/directories/fiware-summit/agenda/program/sitemap.html
+++ b/directories/fiware-summit/agenda/program/sitemap.html
@@ -102,6 +102,7 @@ li {
 		<li><a href="https://www.fiware.org/fgs-2025/enabling-interoperable-data-exchange-between-systems.html">Enabling Interoperable Data Exchange Between Systems</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/introduction-to-iot-agents.html">Introduction to IoT Agents</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/ideation.html">IDEATION</a></li>
+		<li><a href="https://www.fiware.org/fgs-2025/interoperability-unleashed-for-data-spaces-specification-languages-and-scoring-for-big-data-and-ai-integration.html">Interoperability Unleashed for Data Spaces Specification Languages and Scoring for Big data and AI integration</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/data-as-a-strategic-asset--lessons-from-porto-s-urban-platform-and-the-beopen-project.html">Data as a Strategic Asset: Lessons from Porto’s Urban Platform and the BeOpen Project</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/coffee-break.html">Coffee Break</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/sdg-driven-solutions-for-a-sustainable-world-cup-legacy.html">SDG-Driven Solutions for a Sustainable World Cup Legacy</a></li>
