Update Agenda & Speakers

--- a/directories/fiware-summit/agenda/filters.html
+++ b/directories/fiware-summit/agenda/filters.html
@@ -100,6 +100,7 @@
           <option value='vinith-bhandari'>Vinith Bhandari</option>
           <option value='david-campo'>David Campo</option>
           <option value='chandra-challagonda'>Chandra Challagonda</option>
+          <option value='tim-cleffmann'>Tim Cleffmann</option>
           <option value='didac-colominas'>Didac Colominas</option>
           <option value='javier-conde-díaz'>Javier Conde Díaz</option>
           <option value='luigi-coppolino'>Luigi Coppolino</option>
@@ -130,6 +131,7 @@
           <option value='alessandro-rossi'>Alessandro Rossi</option>
           <option value='joaquín-salvachúa'>Joaquín Salvachúa</option>
           <option value='björn-schwarze'>Björn Schwarze</option>
+          <option value='megumi-suzuki'>Megumi Suzuki</option>
           <option value='ángeles-tejado'>Ángeles Tejado</option>
           <option value='thimo-thoeye'>Thimo Thoeye</option>
           <option value='brecht-van-de-vyvere'>Brecht van de Vyvere</option>
