--- a/directories/fiware-summit/speakers/filters.html
+++ b/directories/fiware-summit/speakers/filters.html
@@ -70,6 +70,7 @@
                         <option value='libelium'>Libelium</option>
                         <option value='meaningfy'>Meaningfy</option>
                         <option value='mitsubishi-electric'>Mitsubishi Electric</option>
+                        <option value='mitsubishi-electric-corporation'>Mitsubishi Electric Corporation</option>
                         <option value='mohammed-vi-polytechnic-university'>Mohammed VI Polytechnic University</option>
                         <option value='nec-corporation'>NEC Corporation</option>
                         <option value='oasc'>OASC</option>
