--- a/directories/fiware-summit/agenda/program/sitemap.html
+++ b/directories/fiware-summit/agenda/program/sitemap.html
@@ -94,7 +94,6 @@ li {
 		<li><a href="https://www.fiware.org/fgs-2025/machine-learning--mlops---fiware.html">Machine Learning, MLOps &amp; FIWARE</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/from-smart-meters-to-digital-twins--how-fiwarebox-simplifies-and-accelerates-fiware-based-smart-city-data-integration-and-visualization-on-a-budget.html">From Smart Meters to Digital Twins: How FIWAREBox Simplifies and Accelerates FIWARE-Based Smart City Data Integration and Visualization on a Budget</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/aquaspice-real-time-monitoring-platform.html">Aquaspice Real Time Monitoring Platform</a></li>
-		<li><a href="https://www.fiware.org/fgs-2025/orchestrating-data-sovereignty-for-circular-and-climate-resilient-cities.html">Orchestrating Data Sovereignty for Circular and Climate-Resilient Cities</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/collaboration-of-tegel-projekt-and-mitsubishi-electric--shaping-future-of-smart-cities-with-smart-buildings.html">Collaboration of Tegel Projekt and Mitsubishi Electric: Shaping Future of Smart Cities with Smart Buildings</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/asteriot--a-scalable-fiware-based-platform-for-smart-water-management-and-early-warning-systems.html">AsterIoT: A Scalable FIWARE-Based Platform for Smart Water Management and Early Warning Systems</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/disrupting-global-construction-with-open-source-and-ai.html">Disrupting Global Construction with Open Source and AI</a></li>
@@ -102,6 +101,7 @@ li {
 		<li><a href="https://www.fiware.org/fgs-2025/enabling-interoperable-data-exchange-between-systems.html">Enabling Interoperable Data Exchange Between Systems</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/introduction-to-iot-agents.html">Introduction to IoT Agents</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/ideation.html">IDEATION</a></li>
+		<li><a href="https://www.fiware.org/fgs-2025/orchestrating-data-sovereignty-for-circular-and-climate-resilient-cities.html">Orchestrating Data Sovereignty for Circular and Climate-Resilient Cities</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/interoperability-unleashed-for-data-spaces-specification-languages-and-scoring-for-big-data-and-ai-integration.html">Interoperability Unleashed for Data Spaces Specification Languages and Scoring for Big data and AI integration</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/data-as-a-strategic-asset--lessons-from-porto-s-urban-platform-and-the-beopen-project.html">Data as a Strategic Asset: Lessons from Porto’s Urban Platform and the BeOpen Project</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/coffee-break.html">Coffee Break</a></li>
@@ -110,21 +110,22 @@ li {
 		<li><a href="https://www.fiware.org/fgs-2025/ai-and-natural-language-for-smart-cities--turning-data-into-action.html">AI and Natural Language for Smart Cities: Turning Data into Action</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/earthdatainsight--turning-satellite-data-into-smart-decisions-for-climate-resilient-cities.html">EarthDataInsight: Turning Satellite Data into Smart Decisions for Climate-Resilient Cities</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/from-silos-to-synergy--building-smart-governance-with-interoperability.html">From Silos to Synergy: Building Smart Governance with Interoperability</a></li>
+		<li><a href="https://www.fiware.org/fgs-2025/data-integration-of-smart-buildings-and-smart-cities.html">Data Integration of Smart Buildings and Smart Cities</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/digital-twins-for-real-time-optimization-of-sporting-mega-events.html">Digital Twins for Real-Time Optimization of Sporting Mega-Events</a></li>
-		<li><a href="https://www.fiware.org/fgs-2025/local-digital-twin-toolbox--the-role-of-fiware-in-the-emerging-digital-twins.html">Local Digital Twin Toolbox: The role of FIWARE in the emerging Digital Twins</a></li>
+		<li><a href="https://www.fiware.org/fgs-2025/local-digital-twin-toolbox--the-role-of-fiware-in-the-emerging-digital-twins.html">Local Digital Twin Toolbox: The Role of FIWARE in the Emerging Digital Twins</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/ngsi-ld-farm-exercises.html">NGSI-LD Farm Exercises</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/building-the-future--sustainable-smart-cities-for-resilient-urban-living.html">Building the Future: Sustainable Smart Cities for Resilient Urban Living</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/improving-urban-management-through-generative-ai-and-fiware.html">Improving Urban Management through Generative AI and FIWARE</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/rainbrrain-in-belgium-cities.html">Rainbrrain in Belgium Cities</a></li>
-		<li><a href="https://www.fiware.org/fgs-2025/from-smart-cities-to-digital-cities.html">From Smart Cities to Digital Cities</a></li>
+		<li><a href="https://www.fiware.org/fgs-2025/building-futureproof-cities-through-effective-use-of-data---how-an-open-source-data-hub-implements-data-governance-and-enables-smart-city-solutions.html">Building Futureproof Cities through Effective Use of Data – How an Open Source Data Hub Implements Data Governance and Enables Smart City Solutions</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/smart-monitoring-of-stormwater-retention-basins.html">Smart Monitoring of Stormwater Retention Basins</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/connection-device--displaying-data.html">Connection Device. Displaying Data</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/interoperability-between-energy-communities.html">Interoperability Between Energy Communities</a></li>
+		<li><a href="https://www.fiware.org/fgs-2025/from-smart-cities-to-digital-cities.html">From Smart Cities to Digital Cities</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/enershare---the-energy-data-space-to-facilitate-sustainable-renewable-consumer-centric-transition.html">ENERSHARE - The Energy Data Space to Facilitate Sustainable Renewable Consumer Centric Transition</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/registration-and-welcome-coffee.html">Registration and Welcome Coffee</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/secure-smart-city.html">Secure Smart City</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/ict-platform-and-rapid-prototyping-with-fiware.html">ICT Platform and Rapid Prototyping With FIWARE</a></li>
-		<li><a href="https://www.fiware.org/fgs-2025/governing-trust--legal-and-data-space-frameworks-for-secure-cities-and-resilient-event-management.html">Governing Trust: Legal and Data Space Frameworks for Secure Cities and Resilient Event Management</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/fiware-training.html">FIWARE Training</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/identity-and-access-control-in-fiware-systems.html">Identity and Access Control in FIWARE Systems</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/towards-human-centric-smart-city-services-through-decentralized-identity-management-.html">Towards Human-Centric Smart City Services through Decentralized Identity Management
@@ -133,6 +134,7 @@ li {
 		<li><a href="https://www.fiware.org/fgs-2025/cyber-security-digital-twins-for-securing-smart-cities.html">Cyber-security Digital Twins for Securing Smart Cities</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/deploying-a-data-space-connector.html">Deploying a Data Space Connector</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/break.html">Break</a></li>
+		<li><a href="https://www.fiware.org/fgs-2025/governing-trust--legal-and-data-space-frameworks-for-secure-cities-and-resilient-event-management.html">Governing Trust: Legal and Data Space Frameworks for Secure Cities and Resilient Event Management</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/navigating-legal-challenges-in-data-spaces--lessons-from-the-eu-experience-.html">Navigating Legal Challenges in Data Spaces: Lessons From the EU experience.</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/talking-with-your-smart-solution.html">Talking With Your Smart Solution</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/exploiting-fiware-potential-for-ehds-regulation-compliance.html">Exploiting FIWARE Potential for EHDS Regulation Compliance</a></li>
