--- a/directories/fiware-summit/agenda/program/sitemap.html
+++ b/directories/fiware-summit/agenda/program/sitemap.html
@@ -77,7 +77,7 @@ li {
 		<li><a href="https://www.fiware.org/fgs-2025/introduction-to-json-ld.html">Introduction to JSON-LD</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/fiware-for-cities-from-europe-to-the-world--from-smart-to-ai-ready.html">FIWARE for Cities From Europe to the World, From Smart to AI-ready</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/telefónica---fiware--building-smart-cities-and-destinations.html">Telefónica &amp; FIWARE: Building Smart Cities and Destinations</a></li>
-		<li><a href="https://www.fiware.org/fgs-2025/sustainable-smart-city-with-environmental-sustainability-for-the-use-case-of-cartagena-for-low-emission-zones.html">Sustainable Smart City With Environmental sustainability for the Use Case of Cartagena for Low Emission Zones</a></li>
+		<li><a href="https://www.fiware.org/fgs-2025/sustainable-smart-city-with-environmental-sustainability-for-the-use-case-of-cartagena-for-low-emission-zones.html">Sustainable Smart City With Environmental Sustainability for the Use Case of Cartagena for Low Emission Zones</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/smart-data-models.html">Smart Data Models</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/the-use-case-is-the-goal--interoperability-is-the-means--fiware-is-the-core-.html">The Use Case is the Goal. Interoperability is the Means. FIWARE is the Core.</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/next-generation-governance--where-smart-meets-digital.html">Next-Generation Governance: Where Smart Meets Digital</a></li>
@@ -143,8 +143,8 @@ li {
 		<li><a href="https://www.fiware.org/fgs-2025/fiware-turtle-sim-using-a-ros2-iot-agent.html">FIWARE Turtle SIM Using a ROS2 IoT Agent</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/ddos-with-orion-ld.html">DDOS With Orion-LD</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/lunch.html">Lunch</a></li>
+		<li><a href="https://www.fiware.org/fgs-2025/building-bridges-through-science--international-academic-cooperation-for-digital-transformation.html">Building Bridges Through Science: International Academic Cooperation for Digital Transformation</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/options-for-data-persistence.html">Options for Data Persistence</a></li>
-		<li><a href="https://www.fiware.org/fgs-2025/university-5-0-dataspace--a-smart-campus-ecosystem-living-lab-for-ai-driven-innovation-in-the-region.html">University 5.0 Dataspace: a Smart Campus Ecosystem Living Lab for AI-driven Innovation in the Region</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/extended-fiware-catalog-compoinents.html">Extended FIWARE Catalog Compoinents</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/closing.html">Closing</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/training-certificates.html">Training Certificates</a></li>
