--- a/directories/fiware-summit/speakers/filters.html
+++ b/directories/fiware-summit/speakers/filters.html
@@ -71,6 +71,7 @@
                         <option value='meaningfy'>Meaningfy</option>
                         <option value='mitsubishi-electric'>Mitsubishi Electric</option>
                         <option value='mitsubishi-electric-corporation'>Mitsubishi Electric Corporation</option>
+                        <option value='mohammed-v-university-rabat'>Mohammed V University Rabat</option>
                         <option value='mohammed-vi-polytechnic-university'>Mohammed VI Polytechnic University</option>
                         <option value='nec-corporation'>NEC Corporation</option>
                         <option value='oasc'>OASC</option>
@@ -83,7 +84,6 @@
                         <option value='smart-cities-morocco-alliance'>Smart Cities Morocco Alliance</option>
                         <option value='telefonica'>Telefonica</option>
                         <option value='ufrn'>UFRN</option>
-                        <option value='université-mohammed-v-de-rabat'>Université Mohammed V de Rabat</option>
                         <option value='upm'>UPM</option>
                         <option value='urban-service-provider'>Urban Service Provider</option>
             </select>
