--- a/directories/fiware-summit/speakers/people.html
+++ b/directories/fiware-summit/speakers/people.html
@@ -379,7 +379,7 @@
                 </div>
             </div>
         </div>
-        <div id="item-15" class="grid-item université-mohammed-v-de-rabat   managing-partner ">
+        <div id="item-15" class="grid-item mohammed-v-university-rabat   managing-partner ">
             <div class='f-cat active'>
                 <div class='city-photo-container'>
                     <picture>
@@ -390,7 +390,7 @@
                 <div class='profile-details'>
                     <h6 class='name' data-modal='15'>Prof. Mohamed Dafir</h6>
                     <h4 class='position' data-modal='15'>Managing Partner</h4>
-                    <h5 class='company-link'><a target='_blank' href='https://www.um5.ac.ma' rel='noopener'>Université Mohammed V de Rabat</a></h5>
+                    <h5 class='company-link'><a target='_blank' href='https://www.um5.ac.ma' rel='noopener'>Mohammed V University Rabat</a></h5>
                 </div>
                 <div class='icons'>
                         <a class='cat-linkedin' target='_blank' href='https://www.linkedin.com/in/dafir-elkettani/?locale&#x3D;en_US' rel='noopener'><span
@@ -687,7 +687,7 @@
                 </div>
                 <div class='profile-details'>
                     <h6 class='name cat-bio' data-modal='27'>Antonio Jara</h6>
-                    <h4 class='position cat-bio' data-modal='27'>General Manager Smart Cities</h4>
+                    <h4 class='position cat-bio' data-modal='27'>CSO</h4>
                     <h5 class='company-link'><a target='_blank' href='https://www.libelium.com/' rel='noopener'>Libelium</a></h5>
                 </div>
                 <div class='icons'>
