--- a/directories/fiware-summit/agenda/agenda.html
+++ b/directories/fiware-summit/agenda/agenda.html
@@ -2946,7 +2946,7 @@
           <div class="speaker-info">
             <div class="speaker-name">Mohamed Dafir</div>
             <div class="speaker-job-title">Managing Partner</div>
-            <div class="speaker-company">Université Mohammed V de<br/> Rabat</div>
+            <div class="speaker-company">Mohammed V University<br/> Rabat</div>
             <div class="btn-icon">
       				<span class="material-symbols-outlined icon cta small">trending_flat</span>
     				</div>
