fgs25 some images updates

--- a/directories/fiware-summit/agenda/program/sitemap.html
+++ b/directories/fiware-summit/agenda/program/sitemap.html
@@ -144,7 +144,9 @@ li {
 		<li><a href="https://www.fiware.org/fgs-2025/ddos-with-orion-ld.html">DDOS With Orion-LD</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/lunch.html">Lunch</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/building-bridges-through-science--international-academic-cooperation-for-digital-transformation.html">Building Bridges Through Science: International Academic Cooperation for Digital Transformation</a></li>
+		<li><a href="https://www.fiware.org/fgs-2025/opportunities-from-each-panelists.html">Opportunities From Each Panelists</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/options-for-data-persistence.html">Options for Data Persistence</a></li>
+		<li><a href="https://www.fiware.org/fgs-2025/panel-open-discussion.html">Panel Open Discussion</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/extended-fiware-catalog-compoinents.html">Extended FIWARE Catalog Compoinents</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/closing.html">Closing</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/training-certificates.html">Training Certificates</a></li>
