--- a/directories/fiware-summit/agenda/filters.html
+++ b/directories/fiware-summit/agenda/filters.html
@@ -70,6 +70,7 @@
           <option value='fiware-catalog'>FIWARE Catalog</option>
           <option value='fiware-core-concepts'>FIWARE Core Concepts</option>
           <option value='global-fiware-use-cases-shaping-smart-cities-for-2030'>Global FIWARE Use Cases Shaping Smart Cities for 2030</option>
+          <option value='international-academic-cooperation-for-digital-transformation'>International Academic Cooperation for Digital Transformation</option>
           <option value='legal-and-data-space-frameworks-for-secure-cities-and-resilient-event-management'>Legal and Data Space Frameworks for Secure Cities and Resilient Event Management</option>
           <option value='next-generation-governance'>Next-Generation Governance</option>
           <option value='official-speeches'>Official Speeches</option>
@@ -108,6 +109,7 @@
           <option value='gert-de-tant'>Gert De Tant</option>
           <option value='hicham-el-habti'>Hicham El Habti</option>
           <option value='amal-el-fellah-seghrouchni'>Amal El Fellah Seghrouchni</option>
+          <option value='mohamed-essaidi'>Mohamed Essaidi</option>
           <option value='jason-fox'>Jason Fox</option>
           <option value='javier-galvez-campanelli'>Javier Galvez Campanelli</option>
           <option value='gerardo-guarino-f-'>Gerardo Guarino F.</option>
