fgs25 soeakers updates

--- a/directories/fiware-summit/speakers/filters.html
+++ b/directories/fiware-summit/speakers/filters.html
@@ -101,12 +101,12 @@
                         <option value='chairman-fiware-tsc'>Chairman FIWARE TSC</option>
                         <option value='coo'>COO</option>
                         <option value='coordinator'>Coordinator</option>
+                        <option value='cso'>CSO</option>
                         <option value='director'>Director</option>
                         <option value='evangelist'>Evangelist</option>
                         <option value='executive-chairman'>Executive Chairman</option>
                         <option value='expert'>Expert</option>
                         <option value='fellow'>Fellow</option>
-                        <option value='general-manager'>General Manager</option>
                         <option value='governor'>Governor</option>
                         <option value='head-of-unit'>Head of Unit</option>
                         <option value='lead'>Lead</option>
